--- a/index.html
+++ b/index.html
@@ -6,53 +6,71 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/icon-superman.png">
     <title>Héroes</title>
 </head>
 
 <body>
     <div class="bardiscound">Descuentos 20%</div>
     <header>
-        <h1>Héroes</h1>
+        <h1>Card Super Héroes</h1>
     </header>
     <main>
         <section class="caja">
-            <article class="box1">
-                <div class="top"><img src="img/img corazon.png" alt="corazon"></div>
+            <article class="box">
+                <div class="top img1"><img src="img/img corazon.png" alt="corazon"></div>
                 <div class="recuadro">
-                    <img src="img/batman.png" alt="batman">
+                    <img src="img/batman.png" alt="batman" class="superheroe">
                     <h2>Batman</h2>
-                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective
-                        Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
-                    </p>
-                   <a href="#"><button>Ver más</button></a>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
+                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
+                        but also the leap into electronic typesetting</p>
+                    <button><a href="#">Ver más</a></button>
                 </div>
             </article>
-            <article class="box2">
-                <div class="top"><img src="img/img corazon.png" alt="corazon"></div>
+            <article class="box">
+                <div class="top img2"><img src="img/img corazon.png" alt="corazon"></div>
                 <div class="recuadro">
-                    <img src="img/harly.png" alt="harley">
-                    <h2>Harley Quinn</h2>
-                    <p>La creación de Harley Quinn fue una idea de último minuto propuesta por el escritor
-                        estadounidense
-                        Paul Dini para modificar una escena del vigésimo-segundo episodio de Batman: la serie animada
-                    </p>
-                    <a href="#"><button>Ver más</button></a>
+                    <img src="img/diana.png" alt="wander woman" class="superheroe">
+                    <h2>wander woman</h2>
+                    <p>Es una superheroína creada por William Moulton Marston para la editorial DC Comics. Es una
+                        princesa guerrera de las Amazonas, pueblo ficticio basado en el de las amazonas de la mitología
+                        griega. En su tierra natal es conocida como la princesa Diana de Temiscira pero fuera de esta
+                        utiliza la identidad secreta de Diana Prince. </p>
+                    <button><a href="#">Ver más</a></button>
                 </div>
             </article>
-            <article class="box3">
-                <div class="top"><img src="img/img corazon.png" alt="corazon"></div>
+            <article class="box">
+                <div class="top img3"><img src="img/img corazon.png" alt="corazon"></div>
                 <div class="recuadro">
-                    <img src="img/batman.png" alt="batman">
-                    <h2>Batman</h2>
-                    <p>Bruce Wayne es el único personaje que se identifica como Batman y aparece en Batman, Detective
-                        Comics, Batman y Robin, y Batman: The Dark Knight. Dick Grayson vuelve al manto de Nightwing
-                    </p>
-                    <a href="#"><button>Ver más</button></a>
+                    <img src="img/superman.png" alt="superman" class="superheroe">
+                    <h2>superman</h2>
+                    <p>Es un superhéroe que apareció por primera vez en los cómics estadounidenses publicados por DC
+                        Comics. <br>
+                        El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe
+                        Shuster en 1933 cuando ambos se encontraban viviendo en Cleveland, Ohio.</p>
+                    <button><a href="#">Ver más</a></button>
+                </div>
+            </article>
+            <article class="box">
+                <div class="top img4"><img src="img/img corazon.png" alt="corazon"></div>
+                <div class="recuadro">
+                    <img src="img/harly.png" alt="harley quinn" class="superheroe">
+                    <h2>harley quinn</h2>
+                    <p>Harley Quinn es un personaje ficticio creado por los estadounidenses Paul Dini y Bruce Timm para
+                        la editorial DC Comics. Quinn hizo su debut en el vigésimo-segundo episodio de Batman: la serie
+                        animada, «El favor del Joker», en septiembre de 1992 y se convirtió en una villana recurrente en
+                        la serie</p> 
+                    <button><a href="#">Ver más</a></button>
                 </div>
             </article>
         </section>
-        <footer>Todos los deportes reservados a FRONT END 1</footer>
     </main>
+    <footer>
+        <p>Todos los deportes reservados a FRONT END 1</p>
+        <div class="git"><img src="img/github.png" alt="logo github"></div>
+    </footer>
 </body>
 
 </html>
