corrección de imagenes y adición el boton

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <h1>Card Super Héroes</h1>
     </header>
+    <button class="add"><a href="#">+</a></button>
     <main>
         <section class="caja">
             <article class="box">
@@ -22,10 +23,10 @@
                 <div class="recuadro">
                     <img src="img/batman.png" alt="batman" class="superheroe">
                     <h2>Batman</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-                        the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                        of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                        but also the leap into electronic typesetting</p>
+                    <p>Batman (conocido inicialmente como Bat-Man) es un personaje creado por los estadounidenses Bob
+                        Kane y Bill Finger, y propiedad de DC Comics. Apareció por primera vez en la historia titulada
+                        «El caso del sindicato químico» de la revista Detective Comics N.º 27, lanzada por la editorial
+                        National Publications el 30/3/1939.</p>
                     <button><a href="#">Ver más</a></button>
                 </div>
             </article>
@@ -61,7 +62,7 @@
                     <p>Harley Quinn es un personaje ficticio creado por los estadounidenses Paul Dini y Bruce Timm para
                         la editorial DC Comics. Quinn hizo su debut en el vigésimo-segundo episodio de Batman: la serie
                         animada, «El favor del Joker», en septiembre de 1992 y se convirtió en una villana recurrente en
-                        la serie</p> 
+                        la serie</p>
                     <button><a href="#">Ver más</a></button>
                 </div>
             </article>
