corrigiendo armado css html

--- a/index.html
+++ b/index.html
@@ -11,66 +11,89 @@
 </head>
 
 <body>
-    <div class="bardiscound">Descuentos 20%</div>
     <header>
-        <h1>Card Super Héroes</h1>
+        <p class="desc">Descuentos 20%</p>
+        <div class="sticky">
+            <h1 class="title">card super heroes</h1>
+        </div>
+        <nav class="paginas">
+            <ul class="enlaces">
+                <li><a href="">Contacto</a></li>
+                <li><a href="">Registrarme</a></li>
+                <li><a href="login.html">Iniciar</a></li>
+            </ul>
+        </nav>
     </header>
-    <button class="add"><a href="#">+</a></button>
     <main>
-        <section class="caja">
-            <article class="box">
-                <div class="top img1"><img src="img/img corazon.png" alt="corazon"></div>
-                <div class="recuadro">
-                    <img src="img/batman.png" alt="batman" class="superheroe">
-                    <h2>Batman</h2>
+        <section class="contenedor">
+            <article class="card ">
+                <div class="icono uno"><img src="img/corazon.svg" alt="icono corazon"></div>
+                <div class="rostro"><img src="img/batman.png" alt="Batman"></div>
+                <div class="info">
+                    <span class="heroe">Batman</span>
                     <p>Batman (conocido inicialmente como Bat-Man) es un personaje creado por los estadounidenses Bob
-                        Kane y Bill Finger, y propiedad de DC Comics. Apareció por primera vez en la historia titulada
-                        «El caso del sindicato químico» de la revista Detective Comics N.º 27, lanzada por la editorial
-                        National Publications el 30/3/1939.</p>
+                        Kane y
+                        Bill Finger, y propiedad de DC Comics. Apareció por primera vez en la historia titulada «El caso
+                        del
+                        sindicato químico» de la revista Detective Comics N.º 27, lanzada por la editorial National
+                        Publications el 30/3/1939.
+                    </p>
+                </div>
+                <div class="mas">
                     <button><a href="#">Ver más</a></button>
                 </div>
             </article>
-            <article class="box">
-                <div class="top img2"><img src="img/img corazon.png" alt="corazon"></div>
-                <div class="recuadro">
-                    <img src="img/diana.png" alt="wander woman" class="superheroe">
-                    <h2>wander woman</h2>
+            <article class="card">
+                <div class="icono dos"><img src="img/corazon.svg" alt="icono corazon"></div>
+                <div class="rostro"><img src="img/diana.png" alt="Mujer marabilla"></div>
+                <div class="info">
+                    <span class="heroe">Mujer marabilla</span>
                     <p>Es una superheroína creada por William Moulton Marston para la editorial DC Comics. Es una
                         princesa guerrera de las Amazonas, pueblo ficticio basado en el de las amazonas de la mitología
                         griega. En su tierra natal es conocida como la princesa Diana de Temiscira pero fuera de esta
-                        utiliza la identidad secreta de Diana Prince. </p>
+                        utiliza la identidad secreta de Diana Prince.
+                    </p>
+                </div>
+                <div class="mas">
                     <button><a href="#">Ver más</a></button>
                 </div>
             </article>
-            <article class="box">
-                <div class="top img3"><img src="img/img corazon.png" alt="corazon"></div>
-                <div class="recuadro">
-                    <img src="img/superman.png" alt="superman" class="superheroe">
-                    <h2>superman</h2>
+            <article class="card">
+                <div class="icono tres"><img src="img/corazon.svg" alt="icono corazon"></div>
+                <div class="rostro"><img src="img/superman.png" alt="Superman"></div>
+                <div class="info">
+                    <span class="heroe">Superman</span>
                     <p>Es un superhéroe que apareció por primera vez en los cómics estadounidenses publicados por DC
                         Comics. <br>
                         El personaje fue creado por el escritor estadounidense Jerry Siegel y el artista canadiense Joe
-                        Shuster en 1933 cuando ambos se encontraban viviendo en Cleveland, Ohio.</p>
+                        Shuster en 1933 cuando ambos se encontraban viviendo en Cleveland, Ohio.
+                    </p>
+                </div>
+                <div class="mas">
                     <button><a href="#">Ver más</a></button>
                 </div>
             </article>
-            <article class="box">
-                <div class="top img4"><img src="img/img corazon.png" alt="corazon"></div>
-                <div class="recuadro">
-                    <img src="img/harly.png" alt="harley quinn" class="superheroe">
-                    <h2>harley quinn</h2>
+            <article class="card">
+                <div class="icono cuatro"><img src="img/corazon.svg" alt="icono corazon"></div>
+                <div class="rostro"><img src="img/harly.png" alt="Harley quinn"></div>
+                <div class="info">
+                    <span class="heroe">Harley quinn</span>
                     <p>Harley Quinn es un personaje ficticio creado por los estadounidenses Paul Dini y Bruce Timm para
                         la editorial DC Comics. Quinn hizo su debut en el vigésimo-segundo episodio de Batman: la serie
                         animada, «El favor del Joker», en septiembre de 1992 y se convirtió en una villana recurrente en
-                        la serie</p>
+                        la serie
+                    </p>
+                </div>
+                <div class="mas">
                     <button><a href="#">Ver más</a></button>
                 </div>
             </article>
         </section>
+        <button class="add"><a href="#">+</a></button>
     </main>
     <footer>
-        <p>Todos los deportes reservados a FRONT END 1</p>
-        <div class="git"><img src="img/github.png" alt="logo github"></div>
+        <div class="derechos">Todos los derechos reservados a <span class="uppercase">front end 1</span></div>
+        <div><img src="img/github.png" alt="logo github"></div>
     </footer>
 </body>
 
