agregue login, media-query e iconos

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <nav class="paginas">
             <ul class="enlaces">
-                <li><a href="">Contacto</a></li>
-                <li><a href="">Registrarme</a></li>
-                <li><a href="login.html">Iniciar</a></li>
+                <li><a href=""><img src="img/mensaje.svg" alt="Mensaje" class="mobile"><span class="nomobile">Contacto</span></a></li>
+                <li><a href=""><img src="img/registro.svg" alt="Registrate" class="mobile"><span class="nomobile">Registrarme</span></a></li>
+                <li><a href="login.html"><img src="img/login.svg" alt="Login" class="mobile"><span class="nomobile">Iniciar</span></a></li>
             </ul>
         </nav>
     </header>
