--- a/login.html
+++ b/login.html
@@ -17,11 +17,29 @@
             <h1 class="title">card super heroes</h1>
         </div>
         <nav class="paginas">
-            <ul class="enlace__log">
-                <li><a href="index.html">Inicio</a></li>
-            </ul>
+            <div class="enlace"><a href="index.html"><img src="img/home.svg" alt="Home" class="mobile"><span class="nomobile">Home</span></a></div>
         </nav>
     </header>
+    <form class="login">
+        <h2 class="mensaje">registrate y salva vidas</h2>
+        <fieldset class="recuadro">
+            <legend>¡Deja tu contacto!</legend>
+            <div class="in-width">
+                <label for="">Email <input type="email" placeholder="Correo electrónico" class="datos"></label>
+            </div>
+            <div class="in-width">
+                <label for="">Password <input type="password" placeholder="Contraseña" class="datos"></label>
+            </div>
+            <div class="in-width">
+                <label for=""><button type=" submit">Enviar</button></label>
+                <label for=""><button type=" reset">Borrar</button></label>
+            </div>
+        </fieldset>
+    </form>
+    <footer>
+        <div class="derechos">Todos los derechos reservados a <span class="uppercase">front end 1</span></div>
+        <div><img src="img/github.png" alt="logo github"></div>
+    </footer>
 </body>
 
 </html>
