agrego formRegistro y sus estilos básicos

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="paginas">
             <ul class="enlaces">
                 <li><a href=""><img src="img/mensaje.svg" alt="Mensaje" class="mobile"><span class="nomobile">Contacto</span></a></li>
-                <li><a href=""><img src="img/registro.svg" alt="Registrate" class="mobile"><span class="nomobile">Registrarme</span></a></li>
+                <li><a href="registro.html"><img src="img/registro.svg" alt="Registrate" class="mobile"><span class="nomobile">Registrarme</span></a></li>
                 <li><a href="login.html"><img src="img/login.svg" alt="Login" class="mobile"><span class="nomobile">Iniciar</span></a></li>
             </ul>
         </nav>
@@ -89,7 +89,7 @@
                 </div>
             </article>
         </section>
-        <button class="add"><a href="#">+</a></button>
+        <button class="add"><a href="registro.html">+</a></button>
     </main>
     <footer>
         <div class="derechos">Todos los derechos reservados a <span class="uppercase">front end 1</span></div>
